# PROJECT

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Qt6/: CMakeLists.txt  mainwindow.h  mainwindow.ui
cluster graphs/: readme
qt/: CMakeLists.txt  fetch_neo_data.cpp  fetch_neo_data.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  neo.h
qt2/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  neo.cpp
qt3 with design/: mainwindow.ui  neo.h
qt4 cluster/: mainwindow.cpp  mainwindow.h  resources.qrc
qt5 with cluster search/: mainwindow.cpp  mainwindow.ui  neo.cpp
qt7 FINAL/: mainwindow.cpp  mainwindow.h  mainwindow.ui  neo.cpp  neo.h
src/: main.cpp  neo.cpp  neo.h
test/: test_neo.cpp
